--- a/Total_Energy_Consumption_State.ipynb
+++ b/Total_Energy_Consumption_State.ipynb
@@ -725,7 +725,7 @@
    ],
    "source": [
     "# Read in CSV\n",
-    "df = pd.read_csv('Total_Energy_Consumption_By_State.csv', skiprows=2)\n",
+    "df = pd.read_csv('Raw_Data_CSV/Total Energy Consumption By State.csv', skiprows=2)\n",
     "\n",
     "# Clean up the DataFrame by dropping NaN values\n",
     "df = df.dropna(axis=1, how='all')\n",
