Added net generation files

--- a/Generation/Total_Energy_Generation.ipynb
+++ b/Generation/Total_Energy_Generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from prophet import Prophet\n",
-    "import os\n"
+    "import os\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,49 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<bound method DataFrame.info of      period      msn                                  seriesDescription  \\\n",
-       "0      2022  AFGVBUS  U.S. Government Other Mobility Fuels Consumpti...   \n",
-       "1      2022  ZWHDPUS       Heating Degree-Days, United States in Number   \n",
-       "2      2022  ZWHDPC9             Heating Degree-Days, Pacific in Number   \n",
-       "3      2022  ZWHDPC8            Heating Degree-Days, Mountain in Number   \n",
-       "4      2022  ZWHDPC7  Heating Degree-Days, West South Central in Number   \n",
-       "...     ...      ...                                                ...   \n",
-       "4995   2018  ARTCBUS  Asphalt and Road Oil Product Supplied in Trill...   \n",
-       "4996   2018  ARNFPUS  Asphalt & Road Oil Non-Combustion Consumption ...   \n",
-       "4997   2018  ARNFBUS  Asphalt & Road Oil Non-Combustion Consumption ...   \n",
-       "4998   2018  ARICPUS  Asphalt and Road Oil Consumed by the Industria...   \n",
-       "4999   2018  ARICBUS  Asphalt and Road Oil Consumed by the Industria...   \n",
-       "\n",
-       "        value                      unit  \n",
-       "0         1.2              Trillion Btu  \n",
-       "1        4245                    Number  \n",
-       "2        3366                    Number  \n",
-       "3        5125                    Number  \n",
-       "4        2200                    Number  \n",
-       "...       ...                       ...  \n",
-       "4995  792.763              Trillion Btu  \n",
-       "4996  327.298  Thousand Barrels per Day  \n",
-       "4997  .792763           Quadrillion Btu  \n",
-       "4998  327.298  Thousand Barrels per Day  \n",
-       "4999  792.763              Trillion Btu  \n",
-       "\n",
-       "[5000 rows x 5 columns]>"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.columns\n",
-    "df.info"
+    "unique_rows = df.drop_duplicates()\n",
+    "unique_rows.to_excel('unique_rows_output.xlsx', index=False)"
    ]
   },
   {
