--- a/Generation/New_Total_Energy_Generation_Graph.ipynb
+++ b/Generation/New_Total_Energy_Generation_Graph.ipynb
@@ -114,7 +114,7 @@
     "#Plot\n",
     "plt.figure(figsize=(10,6))\n",
     "plt.plot(df_graph_data['Year'], df_graph_data['Total Megawatthours'], marker='o', linestyle='-', color='blue')\n",
-    "plt.title('Total Electric Energy Generation by Year (Megawatt-hours)', fontsize=16, fontweight='bold')\n",
+    "plt.title('Total Energy Generation by Year (Megawatt-hours)', fontsize=16, fontweight='bold')\n",
     "plt.xlabel('Year', fontsize=14)\n",
     "plt.ylabel('Total Generation (MWh)', fontsize=14)\n",
     "plt.grid(True)\n",
@@ -160,7 +160,7 @@
     "\n",
     "# Plot the forecast\n",
     "fig = model.plot(forecast)\n",
-    "plt.title('Forecast of Total Electric Energy Generation (Megawatt-hours) to 2035', fontsize=16, fontweight='bold')\n",
+    "plt.title('Forecast of Total Energy Generation (Megawatt-hours) to 2035', fontsize=16, fontweight='bold')\n",
     "plt.xlabel('Year', fontsize=14)\n",
     "plt.ylabel('Total Generation (MWh)', fontsize=14)\n",
     "plt.show()"
